style: new background + disabled button

--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,8 @@ body {
     font-size: var(--font-size-regular);
     color: var(--body);
     background-color: var(--background);
+    background-image: url(/background.svg);
+    background-size: cover;
     margin: 0px;
 }
 
