--- a/src/style_button.css
+++ b/src/style_button.css
@@ -136,7 +136,8 @@
 }
 
 .button:disabled {
-    color: white;
-    background-color: var(--gray-8);
+    color: var(--gray-light-3);
+    background-color: var(--gray-light-1);
+    outline: 2px solid var(--gray-light-2);
     cursor: initial;
 }
