--- a/src/style_button.css
+++ b/src/style_button.css
@@ -7,10 +7,11 @@
     color: white;
 
     min-width: 40px;
+    max-height: 40px;
     padding: .5em;
     border: none;
     border-radius: 8px;
-
+    
     cursor: pointer;
     transition: all .2s ease-in-out;
 }
@@ -126,7 +127,7 @@
 }
 
 .button--error.button--subtle {
-    color: var(--basic-error);
+    color: var(--gray-medium-1);
     background-color: white;
 }
 
